light edit of Dmitriy's docs-bosh #29 PR

--- a/aws-cpi.html.md.erb
+++ b/aws-cpi.html.md.erb
@@ -2,7 +2,7 @@
 title: AWS CPI
 ---
 
-This documents describes cloud properties for different resources created by the AWS CPI.
+This topic describes cloud properties for different resources created by the AWS CPI.
 
 ## <a id='networks'></a> Networks
 
