--- a/bosh-lite.html.md.erb
+++ b/bosh-lite.html.md.erb
@@ -4,8 +4,8 @@ title: BOSH Lite
 
 [BOSH Lite](https://github.com/cloudfoundry/bosh-lite) is a pre-built [Vagrant](https://www.vagrantup.com/) box which includes the Director. It uses containers to emulate VMs which makes it an excellent choice for:
 
-- general BOSH exploration without investing time and resources to configure an IaaS
-- development of releases (including BOSH itself)
-- testing releases locally or in CI
+- General BOSH exploration without investing time and resources to configure an IaaS
+- Development of releases (including BOSH itself)
+- Testing releases locally or in CI
 
-Follow project's [README](https://github.com/cloudfoundry/bosh-lite/tree/master/README.md) to install BOSH Lite.
+Follow the instructions in the project's [README](https://github.com/cloudfoundry/bosh-lite/tree/master/README.md) to install BOSH Lite.
