--- a/deploying.html.md.erb
+++ b/deploying.html.md.erb
@@ -2,9 +2,9 @@
 title: Deploying
 ---
 
-Once referenced stemcells, and releases are uploaded to the Director and deployment manifest is complete, deployment can be formed on the Director. CLI provides a single command to create and update deployments: `bosh deploy`. From the perspective of the Director creation and update of the deployment happens via the same steps.
+Once referenced stemcells and releases are uploaded to the Director and the deployment manifest is complete, a deployment can be formed on the Director. The CLI provides a single command to create and update deployments: `bosh deploy`. From the perspective of the Director, creation and update of the deployment happens through the same steps.
 
-To let the CLI know that you are planning to operate on a specific deployment you have to "set" the deployment:
+To let the CLI know that you are planning to operate on a specific deployment you must set the deployment:
 
 <pre class="terminal">
 bosh deployment ~/workspace/my-deployment/manifest.yml
@@ -12,13 +12,13 @@ bosh deployment ~/workspace/my-deployment/manifest.yml
 Deployment set to `/Users/pivotal/workspace/my-deployment/manifest.yml'
 </pre>
 
-From then on most commands the CLI provides act on the set deployment. To form a deployment on the Director represented by the `manifest.yml` run the deploy command:
+From then on most commands the CLI provides act on the set deployment. To form a deployment on the Director represented by the `manifest.yml`, run the deploy command:
 
 <pre class="terminal">
 bosh deploy
 </pre>
 
-After the deploy command completes with either success of failure you can try running command to list VMs created for this deployment:
+After the deploy command completes with either success or failure you can run a command to list VMs created for this deployment:
 
 <pre class="terminal">
 bosh vms
