--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -34,7 +34,7 @@ title: Index
 
  * [Connecting BOSH or MicroBOSH to an External Postgres Database](connect-postgres-hadb.html)
  * Deploying mutli-VM BOSH
-    * Difference between Microbosh, BOSH, and multi-vm BOSH
+    * Difference between Microbosh, BOSH, and multi-VM BOSH
 
 ---
 ## Using BOSH to deploy software
