--- a/basic-workflow.html.md.erb
+++ b/basic-workflow.html.md.erb
@@ -6,16 +6,16 @@ The Director is primarily used for managing deployments.
 
 Creation of a deployment consists of the following steps:
 
-- create deployment manifest
-- upload stemcells and releases used by the manifest
-- kick off the deploy to form a deployment on the Director
+- Create a deployment manifest
+- Upload stemcells and releases used by the manifest
+- Kick off the deploy to form a deployment on the Director
 
 Updating an existing deployment is effectively the same procedure:
 
-- update deployment manifest with necessary changes
-- upload new stemcells and/or releses
-- kick off the deploy to apply changes
+- Update deployment manifest with necessary changes
+- Upload new stemcells, releases, or both
+- Kick off the deploy to apply changes
 
-All of the steps above are done with a regular editor and via the BOSH CLI.
+All of the steps above are done with a regular editor and through the BOSH CLI.
 
 Next: [Deployment Basics](deployment-basics.html)
