--- a/vsphere-cpi.html.md.erb
+++ b/vsphere-cpi.html.md.erb
@@ -2,7 +2,7 @@
 title: vSphere CPI
 ---
 
-This documents describes cloud properties for different resources created by the vSphere CPI.
+This topic describes cloud properties for different resources created by the vSphere CPI.
 
 ## <a id='networks'></a> Networks
 
@@ -25,7 +25,7 @@ networks:
 ```
 
 ---
-## <a id='resource-pools'></a> Resource pools
+## <a id='resource-pools'></a> Resource Pools
 
 Schema for `cloud_properties` section:
 
@@ -79,7 +79,7 @@ resource_pools:
 ---
 ## <a id='disk-pools'></a> Disk Pools
 
-Currently CPI does not support any cloud properties for disks.
+Currently the CPI does not support any cloud properties for disks.
 
 Example of 10GB disk:
 
