light edit of Dmitriy's docs-bosh #30 PR for sysadmin_commands.html

--- a/sysadmin-commands.html.md.erb
+++ b/sysadmin-commands.html.md.erb
@@ -150,7 +150,7 @@ Takes a snapshot of the job VM that you specify. If you do not specify a `JOB`, 
 ---
 ## <a id="release-maintainers"></a> For Release Maintainers
 
-Use these commands against to create/update releases.
+Use these commands against the Director to create and update releases.
 
 ### <a id="main-release"></a> Release Creation
 
