--- a/deployment-basics.html.md.erb
+++ b/deployment-basics.html.md.erb
@@ -2,7 +2,7 @@
 title: Deployment Basics
 ---
 
-As previously stated, a [deployment](deployment.html) is a collection of VMs and persistent disks. A deployment is split into smaller logical units called deployment jobs.
+A [deployment](deployment.html) is a collection of VMs and persistent disks. A deployment is split into smaller logical units called deployment jobs.
 
 The sections below show how to describe the desired deployment in a deployment manifest. An [example full deployment manifest](#example) is below.
 
@@ -116,7 +116,7 @@ networks:
 
 With all pieces combined together most deployment manifests look something like this:
 
-<p class="note"><strong>Note<strong>: Certain sections (compilation and update) of the deployment manifest were not described. Refer to the [Deployment Manifest Schema](deployment-manifest.html) topic for details.</p>
+<p class="note"><strong>Note</strong>: Certain sections (compilation and update) of the deployment manifest were not described. Refer to the [Deployment Manifest Schema](deployment-manifest.html) topic for details.</p>
 
 ```yaml
 name: my-redis-deployment
