--- a/deployment-manifest.html.md.erb
+++ b/deployment-manifest.html.md.erb
@@ -35,8 +35,9 @@ director_uuid: 1234abcd-5678-efab-9012-3456cdef7890
 ## <a id='releases'></a>Releases Block ##
 
 **releases** [Array, required]: The name and version of each release in the deployment.
-  * **name** [String, required]: Name of a release name used in the deployment
-  * **version** [String, required]: The version of the release to use
+
+  - **name** [String, required]: Name of a release name used in the deployment
+  - **version** [String, required]: The version of the release to use
 
 Example:
 
