--- a/networks.html.md.erb
+++ b/networks.html.md.erb
@@ -2,13 +2,13 @@
 title: Networks
 ---
 
-A BOSH network is an IaaS agnostic representation of the networking layer. The Director is responsible for configuring each deployment jobs' networks with the help of the BOSH Agent and the IaaS. Networking configuration is usually assigned at the boot of the VM and/or when network configuration changes in the deployment manifest for already running deployment jobs.
+A BOSH network is an IaaS-agnostic representation of the networking layer. The Director is responsible for configuring each deployment job's networks with the help of the BOSH Agent and the IaaS. Networking configuration is usually assigned at the boot of the VM and/or when network configuration changes in the deployment manifest for already-running deployment jobs.
 
 There are three types of networks that BOSH supports:
 
 * **manual**: the Director decides how to assign IPs to each job instance based on the specified network subnets in the deployment manifest
 * **dynamic**: the Director defers IP selection to the IaaS
-* **vip**: the Director allows to assign one-off IPs to specific jobs to enable flexible IP routing (e.g. elastic IP)
+* **vip**: the Director allows one-off IP assignments to specific jobs to enable flexible IP routing (e.g. elastic IP)
 
 Each type of network supports one or both IP reservation types:
 
@@ -20,13 +20,13 @@ Each type of network supports one or both IP reservation types:
 
 Networking configuration is usually done in three steps:
 
-- Configuring the IaaS; outside of BOSH's responsiblity
+- Configuring the IaaS: outside of BOSH's responsibility
   - Example on AWS: User creates a VPC and subnets with routing tables.
 - Adding networks section to the deployment manifest to define networks used in this deployment
-  - Example: User adds a manual network with a subnet and adds AWS subnet id into the subnet's cloud properties.
+  - Example: User adds a manual network with a subnet and adds AWS subnet ID into the subnet's cloud properties.
 - Adding network associations for one or more networks to each deployment job
 
-All deployment manifests have a similar structure in terms of network defintions and associations:
+All deployment manifests have a similar structure in terms of network definitions and associations:
 
 ```yaml
 # Network definitions
@@ -67,20 +67,20 @@ See how to define each network type below.
 ---
 ## <a id='manual'></a> Manual Networks
 
-Manual networking allows you to specify one or more subnets and let the Director choose available IP from one of the subnet ranges. A subnet definition specifies the CIDR range and optionally the gateway and DNS servers. In addition certain IPs can be blacklisted (the Director will not use these IPs) via `reserved` property.
+Manual networking allows you to specify one or more subnets and let the Director choose available IPs from one of the subnet ranges. A subnet definition specifies the CIDR range and, optionally, the gateway and DNS servers. In addition, certain IPs can be blacklisted (the Director will not use these IPs) via the `reserved` property.
 
 Each manual network attached to a job instance is typically represented as its own NIC in the IaaS layer.
 
 Schema for manual network definition:
 
-* **name** [String, required]: Name used to reference this network configuration.
-* **type** [String, required]: Value should be `manual`.
-* **subnets** [Array, required]: Lists subnets in this network.
-  * **range** [String, required]: Subnet IP range that includes all IPs from this subnet.
-  * **gateway** [String, optional]: Subnet gateway IP.
-  * **dns** [Array, optional]: DNS IP addresses for this subnet.
-  * **reserved** [Array, optional]: Array of reserved IPs and/or IP ranges. BOSH does not assign IPs from this range to any VM.
-  * **static** [Array, optional]: Array of static IPs and/or IP ranges. BOSH assigns IPs from this range to jobs requesting static IPs.
+* **name** [String, required]: Name used to reference this network configuration
+* **type** [String, required]: Value should be `manual`
+* **subnets** [Array, required]: Lists subnets in this network
+  * **range** [String, required]: Subnet IP range that includes all IPs from this subnet
+  * **gateway** [String, optional]: Subnet gateway IP
+  * **dns** [Array, optional]: DNS IP addresses for this subnet
+  * **reserved** [Array, optional]: Array of reserved IPs and/or IP ranges. BOSH does not assign IPs from this range to any VM
+  * **static** [Array, optional]: Array of static IPs and/or IP ranges. BOSH assigns IPs from this range to jobs requesting static IPs
   * **cloud_properties** [Hash, required]: Describes any IaaS-specific properties for the subnet. May be empty.
 
 Example:
@@ -110,7 +110,7 @@ networks:
     cloud_properties: {subnet: subnet-9be6c6gh}
 ```
 
-Manual networks use dynamic IP reservation by default. They also support static IP reservation. To assign instances of the deployment job specific IPs, a deployment job must specify them in the `static_ips` property for the associated network. Associated network's subnet defintion must also specify them in its `static` property:
+Manual networks use dynamic IP reservation by default. They also support static IP reservation. To assign instances of the deployment job specific IPs, a deployment job must specify them in the `static_ips` property for the associated network. An associated network's subnet definition must also specify them in its `static` property:
 
 ```yaml
 jobs:
@@ -124,16 +124,16 @@ jobs:
     static_ips: [10.10.1.11, 10.10.1.12]
 ```
 
-<p class="note"><strong>Note</strong>: If deployment job uses static IP reservation, all instances must be given static IPs.</p>
+<p class="note"><strong>Note</strong>: If a deployment job uses static IP reservation, all instances must be given static IPs.</p>
 
-A common problem that you may run into is configuring multiple deployments to use overlapping IP range. The Director does _not_ consider an IP as used even if that same Director used that IP in a different deployment. There are two possible solutions for this problem: reconfigure one of the deployments to use a different IP range or use the same IP range but configure each deployment such that reserved IPs exclude each deployment from each other.
+A common problem that you may run into is configuring multiple deployments to use overlapping IP ranges. The Director does not consider an IP to be "used" even if the Director used that IP in a different deployment. There are two possible solutions for this problem: reconfigure one of the deployments to use a different IP range, or use the same IP range but configure each deployment such that reserved IPs exclude the deployment from each other.
 
-<p class="note">Note: It is not guranteed which available IP is picked but you might notice that the Director usually picks next available IP.</p>
+<p class="note">Note: While the Director usually selects the next available IP address, this behavior is not guaranteed.</p>
 
 ---
 ## <a id='dynamic'></a> Dynamic Networks
 
-Dynamic networking defers IP selection to the IaaS. For example, AWS by default assigns a private IP to each instance in the VPC. By associating a deployment job to a dynamic network, BOSH will pick up AWS assigned private IP.
+Dynamic networking defers IP selection to the IaaS. For example, AWS assigns a private IP to each instance in the VPC by default. By associating a deployment job to a dynamic network, BOSH will pick up AWS-assigned private IP addresses.
 
 Each dynamic network attached to a job instance is typically represented as its own NIC in the IaaS layer.
 
@@ -141,9 +141,9 @@ Dynamic networking only supports dynamic IP reservations.
 
 Schema for dynamic network definition:
 
-* **name** [String, required]: Name used to reference this network configuration.
-* **type** [String, required]: Value should be `dynamic`.
-* **dns** [Array, optional]: DNS IP addresses for this network.
+* **name** [String, required]: Name used to reference this network configuration
+* **type** [String, required]: Value should be `dynamic`
+* **dns** [Array, optional]: DNS IP addresses for this network
 * **cloud_properties** [Hash, required]: Describes any IaaS-specific properties for the network. May be empty.
 
 Example:
@@ -161,14 +161,14 @@ networks:
 
 VIP networking enables the association of an IP address that is not backed by any particular NIC. This flexibility enables users to remap a virtual IP to a different instance in cases of a failure.
 
-VIP network attachment is not represented as a NIC in the IaaS layer. It is implemented by AWS CPI with [elastic IPs](http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/elastic-ip-addresses-eip.html), and on OpenStack CPI with [floating IPs](http://docs.openstack.org/user-guide/content/floating_ip_allocate.html).
+VIP network attachment is not represented as a NIC in the IaaS layer. In the AWS CPI, it is implemented with [elastic IPs](http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/elastic-ip-addresses-eip.html). In OpenStack CPI, it is implemented with [floating IPs](http://docs.openstack.org/user-guide/content/floating_ip_allocate.html).
 
 VIP networking only supports static IP reservations.
 
 Schema for VIP network definition:
 
-* **name** [String, required]: Name used to reference this network configuration.
-* **type** [String, required]: Value should be `vip`.
+* **name** [String, required]: Name used to reference this network configuration
+* **type** [String, required]: Value should be `vip`
 * **cloud_properties** [Hash, required]: Describes any IaaS-specific properties for the network. May be empty.
 
 Example:
@@ -198,7 +198,7 @@ vSphere CPI supports:
 
 - Multiple manual networks for each job instance
 - No dynamic networks since vSphere does not manage IP assignments
-- No vip networks since vSphere does not have a elastic/floating IP concept
+- No vip networks since vSphere does not have an elastic/floating IP concept
 
 AWS CPI supports:
 
