--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -25,7 +25,7 @@ title: Index
     * [On OpenStack](deploy-microbosh-to-openstack.html)
        * Heat template
     * [On vSphere](deploy-microbosh-to-vsphere.html)
-       * Compatbility
+       * Compatibility
     * [On Local machine using BOSH Lite](bosh-lite.html)
  * BOSH (micro) deploy step-by-step
     * [explanation of every step of the `bosh (micro) deploy` command]
@@ -33,7 +33,7 @@ title: Index
 ### Advanced BOSH configuration
 
  * [Connecting BOSH or MicroBOSH to an External Postgres Database](connect-postgres-hadb.html)
- * Deploying mutli-VM BOSH
+ * Deploying multi-VM BOSH
     * Difference between Microbosh, BOSH, and multi-VM BOSH
 
 ---
@@ -111,7 +111,7 @@ For BOSH release producers:
 ## Deep-dive into stemcell building
 
 ---
-## Extending BOSH to support other IaaS-es
+## Extending BOSH to support other IaaS-
 
  * What is a CPI
  * Interactions between CPIs and BOSH Agent
