--- a/problems.html.md.erb
+++ b/problems.html.md.erb
@@ -24,7 +24,7 @@ BOSH software releases workflows are used throughout the development of the soft
 
 > **Agility** The ongoing research into what are the repercussions of modern software engineering practices on the productivity in the software cycle, i.e. continuous integration.
 
-BOSH tool chain integrates well with current best practices of software engineering (including Continious Delivery) by providing ways to easily create software releases in an automated ways and to update complex deployed systems with simple commands.
+BOSH tool chain integrates well with current best practices of software engineering (including Continuous Delivery) by providing ways to easily create software releases in an automated ways and to update complex deployed systems with simple commands.
 
 Next: [What is a Stemcell?](stemcell.html)
 
