--- a/deployment-basics.html.md.erb
+++ b/deployment-basics.html.md.erb
@@ -116,7 +116,7 @@ networks:
 
 With all pieces combined together most deployment manifests look something like this:
 
-<p class="note"><strong>Note</strong>: Certain sections (compilation and update) of the deployment manifest were not described. Refer to the <a href=http://docs.cloudfoundry.org/bosh/deployment-manifest.html>Deployment Manifest Schema</a> topic for details.</p>
+<p class="note"><strong>Note</strong>: Certain sections (compilation and update) of the deployment manifest were not described. Refer to the <a href="./deployment-manifest.html">Deployment Manifest Schema</a> topic for details.</p>
 
 ```yaml
 name: my-redis-deployment
