--- a/setup-openstack.html.md.erb
+++ b/setup-openstack.html.md.erb
@@ -24,9 +24,8 @@ Choose a flavor with at least three gigabytes of RAM.
 Create and configure two security groups to restrict incoming network traffic to
 the BOSH VMs.
 
-<p class="note"><strong>Note</strong>: In [OpenStack Grizzly](https://www.openstack.org/software/grizzly/), there are settings for
-both `INGRESS` and `EGRESS` control.
-Set all rules in the following instructions for `INGRESS` only.
+<p class="note"><strong>Note</strong>: In <a href="https://www.openstack.org/software/grizzly/">OpenStack Grizzly</a>, there are settings for both <code>INGRESS</code> and <code>EGRESS</code> control.
+Set all rules in the following instructions for <code>INGRESS</code> only.
 
 ###<a id="ssh"></a>SSH Security Group ###
 
