change absolute to releative links

--- a/setup-openstack.html.md.erb
+++ b/setup-openstack.html.md.erb
@@ -64,4 +64,4 @@ To create a BOSH Security Group:
 
 ##<a id="validate"></a>Step 3: Validate your OpenStack Instance ##
 
-Follow the instructions to [validate your OpenStack instance](http://docs.cloudfoundry.org/deploying/openstack/validate_openstack.html).
+Follow the instructions to [validate your OpenStack instance](../deploying/openstack/validate_openstack.html).
