describe vm structure

--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -70,10 +70,11 @@ title: Index
 
 ### VM Configuration (Looking inside a BOSH Deployment)
 
- * Structure of a BOSH VM
- * Using monit to monitor BOSH VMs
- * Debugging issues with jobs
+ * [Structure of a BOSH VM](vm-struct.html)
+    * [VM Configuration Locations](vm-config.html)
+ * [Process monitoring with Monit](vm-monit.html)
  * Location and use of logs
+ * Debugging issues with jobs
 
 ---
 ## Tutorial for deploying from scratch
