--- a/setup-aws.html.md.erb
+++ b/setup-aws.html.md.erb
@@ -125,6 +125,8 @@ environment variables for the current shell.
 
 ##<a id="infrastructure"></a>Step 6: (Optional) Create AWS Infrastructure ##
 
+<p class="note"><strong>Note</strong>: `bosh aws create` command was originally created to quikly set up development accounts. We do not recommend using for any long-lived environments.</p>
+
 <p class="note"><strong>Note</strong>: Skip this step if you are only deploying MicroBOSH, not BOSH.</p>
 
 1. In a terminal window, run `bosh aws create` to create your AWS infrastructure.
@@ -151,8 +153,7 @@ environment variables for the current shell.
 
 ##<a id="private-subnet"></a>Step 7: (Optional) Restrict Public Access with a Private Subnet ##
 
-By default, you deploy the VMs in a BOSH deployment on AWS to a single public
-subnet.
+By default, you deploy the VMs in a BOSH deployment on AWS to a single public subnet.
 Public subnet traffic on AWS routes through an Internet gateway.
 Private subnet traffic on AWS does not, and any VMs that you deploy to a private
 subnet cannot communicate directly with the Internet.
@@ -195,7 +196,7 @@ BOSH deploys a VM to the subnet that the `network` or `networks` key references.
 
 Routing through a NAT VM allows the VMs on a private subnet to initiate outbound
 traffic to the Internet, but prevents the VMs from receiving inbound traffic
-from the Internet. 
+from the Internet.
 Follow the steps below to route outbound traffic from the VMs on a private
 subnet through a NAT VM.
 
@@ -234,7 +235,7 @@ Add the following entries to the route table:
 
 Routing through an Elastic Load Balancer (ELB) allows the VMs on a private
 subnet to receive inbound traffic from the Internet.
-All traffic from the Internet for the private subnet routes through the ELB, 
+All traffic from the Internet for the private subnet routes through the ELB,
 allowing you to handle access control and SSL decryption at the ELB level.
 
 <p class="note"><strong>Note</strong>: Only traffic inbound from the Internet routes through an ELB. To allow the VMs on a private subnet to initiate outbound traffic to the Internet, you must <a href="#nat">route the outbound traffic through a NAT VM</a>.</p>
